<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="3dp"
    android:layout_marginTop="3dp"
    android:layout_marginRight="3dp"
    android:clickable="true"
    android:focusable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_effect">

        <TextView
            android:id="@+id/tv_channel_video_publish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_margin="5dp"
            android:textColor="@color/subTextColor"
            tools:text="@string/date" />

        <TextView
            android:id="@+id/tv_channel_video_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="5dp"
            android:textColor="@color/subTextColor"
            tools:text="@string/time" />

        <ImageView
            android:id="@+id/iv_channel_video_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/tv_channel_video_publish"
            android:layout_marginTop="4dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/no_image" />

        <TextView
            android:id="@+id/tv_channel_video_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_channel_video_thumbnail"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/video_title" />

        <TextView
            android:id="@+id/tv_channel_video_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_channel_video_title"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            tools:text="@string/video_des" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>