<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/list_rl_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_effect">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/circularImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerInside"
            app:civ_border_color="@color/textColor"
            app:civ_border_width="4dp"
            app:civ_shadow="true"
            app:civ_shadow_color="@color/textColor"
            app:civ_shadow_radius="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            tools:src="@drawable/no_image" />

        <RelativeLayout
            android:id="@+id/list_rl_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/circularImageView">

            <TextView
                android:id="@+id/tv_channel_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/title" />

            <TextView
                android:id="@+id/tv_channel_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:maxLines="4"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                tools:text="@string/channel_des"
                android:layout_below="@id/tv_channel_title"/>

            <TextView
                android:id="@+id/tv_publish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/subTextColor"
                tools:text="@string/date"
                android:layout_below="@id/tv_channel_desc"/>

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/subTextColor"
                android:layout_below="@id/tv_channel_desc"
                android:layout_alignParentEnd="true"
                tools:text="@string/time" />

        </RelativeLayout>

    </RelativeLayout>

</layout>