<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".SettingsActivity">

    <RelativeLayout
        android:id="@+id/settings_rl_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:padding="6dp"
            android:thumbTint="@color/colorAccent"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/tv_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/switcher"
            android:text="@string/settings_activity_light_mode"
            android:textColor="@color/textColor"
            android:textSize="20sp" />
    </RelativeLayout>

    <View
        android:id="@+id/view_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/settings_rl_1"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/subTextColor" />

    <RelativeLayout
        android:id="@+id/settings_rl_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_1"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/setting_tv_youtube_preference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/youtube_channel_list"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/settings_et_channel_list"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/setting_tv_youtube_preference"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:background="@null"
            android:hint="@string/hint_for_edit_text"
            android:inputType="number"
            android:text="@string/default_value_int"
            android:textColor="@color/textColor"
            android:textColorHint="@color/subTextColor" />

    </RelativeLayout>

    <View
        android:id="@+id/view_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/settings_rl_2"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/subTextColor" />

    <RelativeLayout
        android:id="@+id/settings_rl_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_2"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/setting_tv_youtube_preference_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/youtube_channel_video_list"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/settings_et_channel_video_list"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/setting_tv_youtube_preference_video"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:background="@null"
            android:hint="@string/hint_for_edit_text"
            android:inputType="number"
            android:text="@string/default_value_int"
            android:textColor="@color/textColor"
            android:textColorHint="@color/subTextColor" />

    </RelativeLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/save"
        android:textColor="@color/textColor"
        android:textSize="17sp" />

</RelativeLayout>