<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_1"
        android:layout_width="match_parent"
        android:background="#1B1B1B"
        android:padding="5dp"
        android:layout_height="wrap_content">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/circularImageView"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:background="#2B2A2A"
            android:layout_marginStart="6dp"
            android:scaleType="centerInside"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="4dp"
            app:civ_shadow="true"
            app:civ_shadow_color="@color/black"
            app:civ_shadow_radius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_2"
            android:layout_width="250dp"
            android:layout_marginStart="8dp"
            android:padding="2dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/circularImageView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_channel_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:textColor="#2C2929"
                android:background="#2C2929"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@id/cl_2"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/title" />

            <TextView
                android:id="@+id/tv_channel_desc"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:maxLines="4"
                android:textColor="#2C2929"
                android:background="#2C2929"
                app:layout_constraintStart_toStartOf="@+id/tv_channel_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_channel_title"
                android:text="@string/channel_des" />

            <TextView
                android:id="@+id/tv_publish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@+id/tv_channel_desc"
                app:layout_constraintTop_toBottomOf="@+id/tv_channel_desc"
                android:text="@string/date"
                android:textColor="#2C2929"
                android:background="#2C2929"/>

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="@+id/tv_channel_desc"
                app:layout_constraintTop_toBottomOf="@+id/tv_channel_desc"
                android:text="@string/time"
                android:textColor="#2C2929"
                android:background="#2C2929"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>