<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundColor">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/detail_circular_iv"
                    android:layout_width="250dp"
                    android:layout_height="225dp"
                    android:scaleType="centerInside"
                    app:civ_border_color="@color/textColor"
                    app:civ_border_width="4dp"
                    app:civ_shadow="true"
                    app:civ_shadow_color="@color/textColor"
                    app:civ_shadow_radius="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/no_image" />

                <TextView
                    android:id="@+id/tv_detail_channel_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detail_circular_iv"
                    tools:text="@string/title" />

                <TextView
                    android:id="@+id/tv_detail_channel_des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="16dp"
                    android:paddingRight="16dp"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/tv_detail_channel_title"
                    app:layout_constraintStart_toStartOf="@+id/tv_detail_channel_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_channel_title"
                    tools:text="@string/channel_des" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:paddingBottom="25dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/constraint_1">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/constraint_2">

                    <RelativeLayout
                        android:id="@+id/rl_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/textViewPermanentSub"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/subscribers"
                            android:textColor="@color/subTextColor"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_subscribers"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_marginStart="15dp"
                            android:layout_toEndOf="@id/textViewPermanentSub"
                            android:textColor="@color/textColor"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:text="@string/sub_zeros" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/rl_1">

                        <TextView
                            android:id="@+id/textViewPermanentViews"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/views"
                            android:textColor="@color/subTextColor"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_views"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="57dp"
                            android:layout_toEndOf="@id/textViewPermanentViews"
                            android:textColor="@color/textColor"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:text="@string/views_zeros" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/rl_2">

                        <TextView
                            android:id="@+id/textViewPermanentVideoCnt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/vid_cnt"
                            android:textColor="@color/subTextColor"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_video_count"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="0dp"
                            android:layout_toEndOf="@id/textViewPermanentVideoCnt"
                            android:textColor="@color/textColor"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:text="@string/vid_cnt_zeros" />
                    </RelativeLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
